# AI-Agent-Framework

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_ID_CAPABILITIES.md  CODE_OF_CONDUCT.md  COMPLETE_PROJECT_GUIDE.md  CONTRIBUTING.md  GETTING_STARTED_PRACTICAL.md  LICENSE  Makefile  PROFESSIONAL_AGENT_IDS.md  PROJECT_ASSESSMENT.md  README.md  README_TESTING.md  REAL_TIME_QUICK_START.md  REAL_TIME_SUCCESS_SUMMARY.md  SECURITY.md  Sample.txt  conftest.py  demo_agent_with_id.py  demo_professional_agent_ids.py  demo_real_time_problems.py  manage.py  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  stock_data_example.py  test_framework_import.py  test_stock_agent.py  test_system_agent.py
.data/: agent_runs.jsonl  workflow_runs.jsonl
ai_framework/: __init__.py
bench/: README.md  aggregate_results.py  openvino_bench.py
bench_output/: result.json
benchmarks/: results.csv
django_app/: README.md  celery.py  db.sqlite3  manage.py
docs/: ADVANCED_UI_CONCEPTS.md  ARCHITECTURE_DESIGN.md  IMPLEMENTATION_GUIDE.md  REAL_TIME_PROBLEMS_GUIDE.md  api_reference.md  deployment_guide.md  design_doc.md  performance_benchmarks.md  roadmap.md  sdk_usage.md
frontend/: DISCONNECTED.md  README.md  package-lock.json  package.json  tailwind.config.js
reference_agents/: customer_support_agent.py  data_analysis_agent.py  document_processing_agent.py  human_in_loop_agent.py  multi_agent_collab_demo.py  security_monitoring_agent.py
scripts/: init_kafka.sh  load_sample_agents.py  migrate_db.sh  run_demos.py  run_server.sh  (+4 more)
(+198 files in other folders)
