[tool.ruff]
line-length = 88

[tool.ruff.lint]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.ruff.format]
exclude = [".venv", "venv", "build", "dist", "node_modules", "**/*.ipynb"]

[tool.poetry]
name = "ai-agent-framework-complete"
version = "0.1.0"
description = "AI Agent Framework scaffold"
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
